# crudify

./: Cargo.toml  README.md  flake.nix
.claude/: settings.local.json
.github/workflows/: ci.yaml
examples/: README.md  gen_test_image.rs
src/: config.rs  grid.rs  image_io.rs  lib.rs  main.rs  palette.rs  pixelate.rs
src/palette/: oklab.rs
