[package]
name = "crudify"
description = "Reduce resolution and number of colors in preparation for painting"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.103"
exoquant = "0.2.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
